Tweak package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "counter",
   "version": "0.0.1",
-  "description": "A counter for profiling in Node.js.",
+  "description": "A profiling counter for Node.js.",
   "main": "counter.js",
   "files": [
     "counter.js"
